--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
@@ -19,7 +19,7 @@
         <div class="head-wrap">
             <div class="left-head">
                 <i class="fa-solid fa-calculator"></i>
-                <p>Casio Calculator</p>
+                <p>Calculator</p>
             </div>
             <div class="right-head">
                 <i class="fa-solid fa-minus"></i>
@@ -30,7 +30,7 @@
 
         <div class="second-row">
             <i class="fa-solid fa-bars"></i>
-            <p> Standard</p>
+            <p>Standard</p>
             <i class="fa-solid fa-maximize"></i>
         </div>
 
